# Grosser-Rat-Wrapper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: workflows
.github/workflows/: default.yml  documentation.yaml  main.yml
config/: geschaeftstypen.yaml
docs/: Makefile
docs/source/: basics.md  conf.py  index.rst
src/grosserratwrapper/: __about__.py
src/grosserratwrapper/config/: __init__.py  config.toml
src/grosserratwrapper/grosserrat/: main.py
tests/: test_main.py
tests/data/: grossrat.sqlite3  grossrat_wrong_columns.sqlite3
